--- a/my-project-app/src/app/main/main.component.html
+++ b/my-project-app/src/app/main/main.component.html
@@ -1,1 +1,9 @@
-<p>main works!</p>
+@if (isLoggedIn) {
+    <div class="container">
+      <app-tattoo-list />
+      
+    </div>
+    } @else {
+    <app-home />
+    }
+    
