--- a/my-project-app/src/app/single-tattoo/add-tattoo/add-tattoo.component.html
+++ b/my-project-app/src/app/single-tattoo/add-tattoo/add-tattoo.component.html
@@ -1,1 +1,94 @@
-<p>add-tattoo works!</p>
+<!-- homepage -->
+<div class="container">
+    <div class="new-tattoo-border">
+      <div class="header-background">
+        <span>New Tattoo</span>
+      </div>
+      <form #form="ngForm" (ngSubmit)="addTattoo(form)">
+        <div class="new-tattoo-title">
+          <label for="tattooName">Title <span class="red">*</span></label>
+          <input
+            type="text"
+            name="tattooName"
+            id="tattooName"
+            ngModel
+            #inputTattooName="ngModel"
+            required
+            minlength="5"
+          />
+          <label for="imgUrl">Image URL <span class="red">*</span></label>
+          <input
+            type="text"
+            name="imgUrl"
+            id="imgUrl"
+            ngModel
+            #inputImgUrl="ngModel"
+            required
+            minlength="5"
+          />
+  
+          @if(inputTattooName?.touched){
+          <div>
+            @if(inputTattooName?.errors?.['required']){
+            <p class="error">Tattoo name is required.</p>
+            }
+            <!---->
+            @if(inputTattooName?.errors?.['minlength']){
+            <p class="error">Tattoo name must be at least 5 characters long.</p>
+            }
+          </div>
+          }
+        </div>
+        <div class="new-tattoo-content">
+          <label for="descriptionText">Description <span class="red">*</span></label>
+          <textarea
+            type="text"
+            name="descriptionText"
+            id="descriptionText"
+            rows="8"
+            class="height"
+            ngModel
+            #inputDescriptionText="ngModel"
+            required
+            minlength="10"
+          ></textarea>
+
+  
+          @if(inputDescriptionText?.touched){
+          <div>
+            @if(inputDescriptionText?.errors?.['required']){
+            <p class="error">The field with your description is required.</p>
+            }
+            <!---->
+            @if(inputDescriptionText?.errors?.['minlength']){
+            <p class="error">Post must be at least 10 characters long.</p>
+            }
+          </div>
+        }
+          @if(inputImgUrl?.touched){
+            <div>
+              @if(inputImgUrl?.errors?.['required']){
+              <p class="error">The field with your image URL is required.</p>
+              }
+              <!---->
+              @if(inputImgUrl?.errors?.['minlength']){
+              <p class="error">Image URL must be at least 10 characters long.</p>
+              }
+            </div>
+          
+          }
+        
+        <div class="new-tattoo-buttons">
+          <button class="cancel">Cancel</button>
+          <button
+            class="public"
+            [disabled]="form.invalid"
+            [style]="{ backgroundColor: form.invalid ? 'grey' : '#234465' }"
+          >
+            Post
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+  
