--- a/my-project-app/src/app/user/login/login.component.html
+++ b/my-project-app/src/app/user/login/login.component.html
@@ -21,6 +21,7 @@
           ngModel
           #inputEmail="ngModel"
           required
+          [appEmail]="domains"
           
         />
       </p>
