--- a/my-project-app/src/app/single-tattoo/add-tattoo/add-tattoo.component.html
+++ b/my-project-app/src/app/single-tattoo/add-tattoo/add-tattoo.component.html
@@ -35,6 +35,7 @@
             #inputImg="ngModel"
             required
             minlength="5"
+            appImageValidation
           />
   
           @if(inputType?.touched){
@@ -85,6 +86,11 @@
               <p class="error">Image URL must be at least 10 characters long.</p>
               }
             </div>
+            @if(inputImg?.errors?.['imageValidator']){
+              <p class="error">
+                Image URL is invalid.
+              </p>
+              }
           
           }
         
