--- a/my-project-app/src/app/single-tattoo/edit-tattoo/edit-tattoo.component.html
+++ b/my-project-app/src/app/single-tattoo/edit-tattoo/edit-tattoo.component.html
@@ -28,6 +28,26 @@
             minlength="5"
             appImageValidation
           />
+
+          <label for="price">Price <span class="red">*</span></label>
+          <input
+            type="text"
+            name="price"
+            id="price"
+            ngModel
+            #inputPrice="ngModel"
+            required
+          
+          />
+          @if(inputPrice?.touched){
+            <div>
+              @if(inputPrice?.errors?.['required']){
+              <p class="error">The field with the price is required.</p>
+              }
+              <!---->
+           
+            </div>
+          }
   
           @if(inputType?.touched){
           <div>
