--- a/my-project-app/src/app/tattoo-list/tattoo-list.component.html
+++ b/my-project-app/src/app/tattoo-list/tattoo-list.component.html
@@ -3,15 +3,17 @@
     <app-loader />
     }@else {
   <div class="tattoo-title">
-    @for (tattoo of tattoos; track $index) {
+    @for (tattoo of tattoos ; track $index) {
     <div class="tattoo-container">
       <div class="tattoo-name-wrapper">
         <div class="tattoo-name">
           <a [routerLink]="tattoo._id" class="normal">
             <h2>{{ tattoo.type }}</h2>
-            <img src="{{ tattoo.img }}" />
+            <p class="description">{{ tattoo.description }}</p>
+              <p>
+            <!-- <img src="{{ tattoo.img }}" /> -->
           </a>
-          <div class="columns">
+          <!-- <div class="columns">
             <div>
               <p class="description">{{ tattoo.description }}</p>
               <p>
@@ -21,12 +23,21 @@
                 <p>
                   Username: <span>{{ tattoo.ownerName }}</span>
                 </p>
+
               </div>
-              <a [routerLink]="tattoo._id" class="more-info-btn">More info</a>
+              <div class="price">
+                <p>
+                  Price: <span>{{ tattoo.price }}</span>
+                </p>
+
+              </div>
+
+              
              
             </div>
            
-          </div>
+          </div> -->
+          <a [routerLink]="tattoo._id" class="more-info-btn">More info</a>
         </div>
       </div>
     </div>
