added delete comment and profille changes
added delete comment option and profile edit fixed and working

--- a/my-project-app/src/app/home/home.component.html
+++ b/my-project-app/src/app/home/home.component.html
@@ -6,7 +6,7 @@
           Thunder's Tattoos is a place where you can browse, add and comment on tattoos! It is also a personal space for the tattooist Thunder, whose designs are popular in Sofia, Bulgaria!
         </p>
   
-        
+        @if (!isLoggedIn){
         <div class="logged">
           <ul>
             <li>
@@ -23,6 +23,7 @@
             </li>
           </ul>
         </div>
+      }
         
       </div>
     </div>
