--- a/my-project-app/src/app/user/profile/profile.component.html
+++ b/my-project-app/src/app/user/profile/profile.component.html
@@ -56,6 +56,7 @@
             id="email"
             value="john.doe@gmail.com"
             formControlName="email"
+            appEmail
           />
         </div>
 
