--- a/my-project-app/src/app/home/home.component.html
+++ b/my-project-app/src/app/home/home.component.html
@@ -3,7 +3,7 @@
       <div class="welcome">
         <h3>Welcome!</h3>
         <p>
-          Thunder's Tattoos is a place where you can browse, add and comment on tattoos! It is also a personal space for the tattooist Thunder, whose designs are popular in Sofia, Bulgaria!
+          Tattoos Mania is a place where tattooists in Sofia, Bulgaria upload their recent work! Everyone can browse and add tattoos of their own!  
         </p>
   
         @if (!isLoggedIn){
