--- a/my-project-app/src/app/user/login/login.component.html
+++ b/my-project-app/src/app/user/login/login.component.html
@@ -78,7 +78,7 @@
       </button>
 
       <p class="text-center">
-        Have an account?
+        Don't have an account?
         <a routerLink="/register">Register</a>
       </p>
     </fieldset>
