--- a/my-project-app/src/app/core/header/header.component.css
+++ b/my-project-app/src/app/core/header/header.component.css
@@ -25,8 +25,10 @@ header ul {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 75%;
+    width: 100%;
     margin: auto;
+    gap: 30px;
+    padding: 15px;
   }
   
   header ul span {
@@ -43,6 +45,8 @@ header ul {
     text-align: center;
     border-radius: 20px;
     text-shadow: 1px 1px rgb(87, 86, 86);
+    padding: 5px;
+    border:2px solid black;
   }
   
   header li:hover {
@@ -82,6 +86,7 @@ header ul {
     align-items: center;
     width: 30%;
     margin: auto;
+    
   }
   
   /* mini-navbar */
@@ -111,6 +116,10 @@ header ul {
     border: 2px solid black;
     padding: 10px;
     border-radius: 10px;
+  }
+
+  .navigation {
+    font-size: 20px;
   }
 
 
